RESOLVED FIXED105240
[BlackBerry] Editable text element can't be selected
https://bugs.webkit.org/show_bug.cgi?id=105240
Summary [BlackBerry] Editable text element can't be selected
Sean Wang
Reported 2012-12-17 19:03:42 PST
DESCRIPTION: It can't select text in a <input> or <textarea> now. HOW TO REPRODUCE: Touch hold on the word in a editable element to try to trigger the text selection. EXPECTED: The word under finger should be selected, selection handles and overlay should be shown. ACTUAL: Selection is not triggered, but the FCC caret and the CCM are shown.
Attachments
patch (2.48 KB, patch)
2012-12-17 19:18 PST, Sean Wang
no flags
Sean Wang
Comment 1 2012-12-17 19:18:01 PST
Rob Buis
Comment 2 2012-12-17 19:35:36 PST
Comment on attachment 179861 [details] patch LGTM.
WebKit Review Bot
Comment 3 2012-12-17 23:35:26 PST
Comment on attachment 179861 [details] patch Clearing flags on attachment: 179861 Committed r137991: <http://trac.webkit.org/changeset/137991>
WebKit Review Bot
Comment 4 2012-12-17 23:35:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.