[BlackBerry] Editable text element can't be selected https://bugs.webkit.org/show_bug.cgi?id=105240

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2012-12-17
Reviewed by Rob Buis.
Internally reviewed by Genevieve Mak and Mike Fenton.

Internal PR266755
When the target is Text, we should allow it to collect text nodes in
the shadow tree of text editable elements.

* WebKitSupport/FatFingers.cpp:
(BlackBerry::WebKit::FatFingers::getNodesFromRect):

Canonical link: https://commits.webkit.org/123498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137991 268f45cc-cd09-0410-ab3c-d52691b4dbfc